--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
             <version>5.3.2.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
 
     </dependencies>
 
