--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/db_test?useUnicode=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/db_test?createDatabaseIfNotExist=true&useUnicode=true&serverTimezone=UTC
 spring.datasource.username=sqluser
 spring.datasource.password=admin
