--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/db_example?useUnicode=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/db_example?createDatabaseIfNotExist=true&useUnicode=true&serverTimezone=UTC
 spring.datasource.username=sqluser
 spring.datasource.password=admin
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+
