--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.username=sqluser
 spring.datasource.password=admin
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
 
